# structure-detective

./: .gitignore  pyproject.toml  review_sens.txt
.github/workflows/: pypi.yml  testpypi.yml
structure_detective/: __init__.py  lib.py  structure.py
structure_detective/de/: structure.py  trans_structure.py
structure_detective/en/: structure.py  trans_structure.py
structure_detective/es/: morph_translation.py  structure.py  trans_structure.py
tests/: en_sens.py  en_sens_old.py  lib.py  test_de.py  test_en.py  test_es.py  test_structure_detective.py  test_tbr.py
